{{$NEXT}}

0.3.7  2021-04-24T06:35:16+12:00
  - Add X::CSS abstract exception class
  - Tweak warning method to coerce message to Str

0.3.6  2021-03-17T06:39:43+13:00
  - Add 'rem' and 'ch' units. Thanks JRaspass.

Release 0.3.5 2021-01-03
- Add CSS::Grammar::Defs
Release 0.3.4 2020-02-11
- rename sources *.pm -> *.rakumod
- moved repo p6-css/CSS-Grammar-p6 -> css-raku/CSS-Grammar-raku
Release 0.3.3 2019-10-14
- [CSS::Grammar]
  -- Added case-sensitive <Id> token
  -- Ignore \n in escapes as per https://www.w3.org/TR/css-syntax-3/#escaping;
     impicitly makes '\' at the end-of-line into a continuation
- [CSS::Grammar::Actions] Added :xml option. Has the affect of making
  element names case sensitive
Release 0.3.2
- deprecated CSS::Grammar::AST %CSS21-Colors, %CSS3-Colors
  CSS::Module now uses Color::Names
Release 0.3.1
- dropped "unclosed '('" warning.
- dropped <eol> token and (inaccurate) line-no reporting in warnings
Release 0.3.0
- Consolidated AST for at-rules. @margin-rule, @media-rule, @charset, @import, @margin
  now all return nodes of type 'at-rule'. Each contains an 'at-keyw' sub-node, which
  can be used to determine the at-rule type.