@@ -44,5 +44,5 @@ grammar CSS::Grammar::CSS3 #:api<css-syntax-3-20140220>
     }
 
     # 'lexer' css3 exceptions
-    token nonascii     {<- [\x0..\x7F]>}
+    token nonascii     {<- [\x0..\x7F \n]>}
 }
